<resources>
    <string name="app_name">Whatsapp_Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="search">Search...</string>
    <string name="chats">Chats</string>
    <string name="updates">Updates</string>
    <string name="communities">Communities</string>
    <string name="calls">Calls</string>
    <string name="rachit">Rachit</string>
    <string name="message">Message</string>
    <string name="_19_04_24">19/04/24</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="_100_contacts">100 contacts</string>
</resources>